# template-rust-actix-web2

backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml
xtask/src/: main.rs
