[package]
name = "{{project-name}}-backend"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"
categories = []
description = """
{{project-name}}-backend description.
"""
homepage = "https://github.com/kilork/{{project-name}}"
keywords = []
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/kilork/{{project-name}}"

[features]

default = []

ui = ["{{project-name}}-frontend", "actix-web-static-files"]

[dependencies]
actix = "0.9"
actix-rt = "1.0"
actix-service = "1.0"
actix-web = { version = "2.0", features = ["rustls"] }
dotenv = "0.15"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1"
exitfailure = "0.5"
log = "0.4"
env_logger = "0.7"

{{project-name}}-frontend = { path = "../frontend", optional = true }
actix-web-static-files = { version = "2", optional = true }